--- a/gb/20/8/8/n12315297.md
+++ b/gb/20/8/8/n12315297.md
@@ -13,38 +13,37 @@
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/6/25/n12211518.md#1">未来十年房屋最流行的配置有哪些？</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/20/7/29/n12291132.md#1">维州扩大补贴计划 助出租房安装太阳能</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361536.md#1">20多年来 独立候选人首次入选堪培拉议会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361541.md#1">澳洲国立大学宣布再裁减80多个职位</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360116.md#1">病毒传播 堪培拉当局促居民为爱犬接种疫苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360106.md#1">首都行政区总和生育率全澳最低</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360103.md#1">首都工党再次执政 为获支持做出诸多承诺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359731.md#1">经济排名：西澳昆州领先 新州北领地垫底</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355620.md#1">巴泽航空暂停巴厘岛-堪培拉航班</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/22/n14355619.md#1">袋熊遭枪击四次侥幸存活 痊愈后将重返野外</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/5/n14524911.md#1">国王生日长周末将至 交通违规双倍扣分</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/5/n14524815.md#1">南极冷锋席卷西南部 多地创下低温纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/3/n14523412.md#1">堪培拉市区停车费上涨 写字楼使用率改善</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/3/n14523410.md#1">7月1日起首都行政区电费上涨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/3/n14523413.md#1">调查：国立大学健康与医学院普遍存在欺凌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/3/n14523417.md#1">堪培拉老年住院病人?并发症或感染率高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/3/n14523415.md#1">堪培拉获评2025年全球生活质量最佳城市</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/28/n14519188.md#1">堪培拉老年临时护理中心延长运营两年</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/26/n10172889.md#1" target="_blank">袁斌：中共抓壮丁连老弱小孩也不放过</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489263.md#1" target="_blank">伦敦盛大游行 34国法轮功学员吁停止迫害</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367455.md#1">【未解之谜】石油的真相 取之不竭的能源？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364228.md#1">立冬养精蓄锐 补肾保养日常六招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14363872.md#1">太白昼现女主昌 寇准再刚也无奈呀！（1）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/4/n14364247.md#1">【未解之谜】5岁萌娃才智超50岁教授？神童的秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363099.md#1">三国英雄——序言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368926.md#1">【新闻大破解】川普组反共内阁 三战风险下降</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368957.md#1">【舞蹈】飞天舞蹈学院2024第一学期舞蹈考试（高班 女生）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367869.md#1">【菁英论坛】中共苦等大选骚乱 川普上台讨前债</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367396.md#1">11月在Costco买啥 19年老员工推荐8种东西</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/14/n14350363.md#1">美老兵斥《长津湖》造假镜头：是美军赢了</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367390.md#1">主张创作自由遭霍启刚怒批 杜琪峯获同行力挺</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367417.md#1">57岁黎明坐着唱快歌 超水准演出获夸赞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14367876.md#1">成本过亿 黄晓明《戴假发的人》预售仅2.1万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367685.md#1">沈春华自曝在上海机场重摔 围巾又卷入输送带</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/8/n14367447.md#1">富商丈夫讲话太伤人 黄圣依节目中再度喊离婚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/10/n14368025.md#1">如何去除墙上的霉菌？ 专家推荐用这一物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/9/n14367601.md#1">为何你老是忘记事情？ 专家：这对大脑有益</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363112.md#1">常见“睡眠”误解！ 比睡满8小时更重要的事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368489.md#1">研究显示 每天做这件事5分钟就可以降血压</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/6/n14365327.md#1">三大护眼营养素 这样吃胜过保健品</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534405.md#1">他说了一句话  冤孽紧追不舍穿越前生到今生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545497.md#1">【军事情报局】歼-10竟然仿自以色列狮式战机</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545556.md#1">【佳音时刻】中共最怕什么？王毅曝党国机密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545082.md#1">沈舟：中共航母编队到香港 党媒泄老底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544964.md#1">近千家A股公司涉机器人业务 专家：资本在套利</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545439.md#1">中国出生率骤降 教师“铁饭碗”不再稳固</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545646.md#1">吴谨言复出遇阻？传大陆演员35岁起禁演古偶剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545808.md#1">在正确时间帮植物浇水 避免引发真菌疾病</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541355.md#1">你应该知道扁豆的所有健康益处</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/8/n12315297.htm">ACT工党承诺将为太阳能设备提供无息贷款</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/8/8/n12315297.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
